# medinsight-engine

./: .gitignore  LICENSE  MedInsight_Guide_English.md  MedInsight_Guide_Hinglish.md  README.md  pyproject.toml  requirements.txt
app/: main.py  styles.py
src/medinsight/core/: analytics.py  cleaning.py  reporting.py  visualizations.py
src/medinsight/utils/: helpers.py
